[tool.poetry]
name = "taiwan-local-puzzle"
version = "0.1.0"
description = ""
authors = ["Phate334"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.3"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
